cambie mi pagina al español

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae cumque laborum aperiam fugit vitae minima, iusto suscipit nulla autem saepe quo quasi rem tempore tempora veniam quaerat quas dolorum vero.
+    </h1>
 </body>
 </html>
